show list of issues
